--- a/Src/NuGetDefense.NVD/NuGetDefense.NVD.nuspec
+++ b/Src/NuGetDefense.NVD/NuGetDefense.NVD.nuspec
@@ -3,22 +3,23 @@
   <metadata>
     <id>NuGetDefense.NVD</id>
     <title>NuGetDefense.NVD</title>
-    <version>1.0.0.0</version>
+    <version>1.0.0.1</version>
     <authors>Curtis Carter</authors>
     <owners>Curtis Carter</owners>
     <projectUrl>https://github.com/DigitalCoyote/NuGetDefense</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <summary>NuGetDefense.NVD ~ NVD logic and functions used in NuGetDefense</summary>
     <description>Provides logic to scan packages using the National Vulnerability Database.</description>
-    <releaseNotes>https://github.com/digitalcoyote/NuGetDefense/releases</releaseNotes>
-    <repository type="git" url="https://github.com/digitalcoyote/NuGetDefense.git"/>
+    <releaseNotes>https://github.com/digitalcoyote/NuGetDefense.NVD/releases</releaseNotes>
+    <repository type="git" url="https://github.com/digitalcoyote/NuGetDefense.NVD.git"/>
     <license type="expression">MIT</license>
     <tags>Security</tags>
     <dependencies>
       <group targetFramework=".NETStandard2.0">
         <dependency id="MessagePack" version="2.1.90" />
         <dependency id="System.Text.Json" version="4.7.1" />
-        <dependency id="NuGetDefense.Core" version="[1.0.0]" />
+        <dependency id="NuGet.Versioning" version="5.5.0" />
+        <dependency id="NuGetDefense.Core" version="[1.0.1.1]" />
       </group>
     </dependencies>
   </metadata>
