--- a/Src/NVDFeedImporter/NVDFeedImporter.csproj
+++ b/Src/NVDFeedImporter/NVDFeedImporter.csproj
@@ -8,22 +8,12 @@
     <ItemGroup>
       <PackageReference Include="MessagePack" Version="2.1.115" />
       <PackageReference Include="NuGet.Versioning" Version="5.5.1" />
-      <PackageReference Include="NuGetDefense.Core" Version="1.0.3" />
+      <PackageReference Include="NuGetDefense.Core" Version="1.0.4" />
+      <PackageReference Include="System.Text.Json" Version="4.7.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Include="..\NuGetDefense.NVD\CpeParser.cs">
-        <Link>CpeParser.cs</Link>
-      </Compile>
-      <Compile Include="..\NuGetDefense.NVD\FeedUpdater.cs">
-        <Link>FeedUpdater.cs</Link>
-      </Compile>
-      <Compile Include="..\NuGetDefense.NVD\FeedVulnerabilities.cs">
-        <Link>FeedVulnerabilities.cs</Link>
-      </Compile>
-      <Compile Include="..\NuGetDefense.NVD\NVDFeed.cs">
-        <Link>NVDFeed.cs</Link>
-      </Compile>
+      <ProjectReference Include="..\NuGetDefense.NVD\NuGetDefense.NVD.csproj" />
     </ItemGroup>
 
 </Project>
