--- a/Src/NuGetDefense.NVD/NuGetDefense.NVD.nuspec
+++ b/Src/NuGetDefense.NVD/NuGetDefense.NVD.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>NuGetDefense.NVD</id>
     <title>NuGetDefense.NVD</title>
-    <version>1.0.1.1</version>
+    <version>1.0.2.0</version>
     <authors>Curtis Carter</authors>
     <owners>Curtis Carter</owners>
     <projectUrl>https://github.com/DigitalCoyote/NuGetDefense</projectUrl>
@@ -19,16 +19,12 @@
         <dependency id="MessagePack" version="2.1.115" />
         <dependency id="System.Text.Json" version="4.7.1" />
         <dependency id="NuGet.Versioning" version="5.5.1" />
-        <dependency id="NuGetDefense.Core" version="[1.0.2]" />
+        <dependency id="NuGetDefense.Core" version="1.0.4" />
       </group>
     </dependencies>
-    <contentFiles>
-      <files include="**/VulnerabilityData.bin" buildAction="None" copyToOutput="true" />
-    </contentFiles>
   </metadata>
 
   <files>
     <file src="bin/Release/netstandard2.0/NuGetDefense.NVD.dll" target="lib/netstandard2.0/NuGetDefense.NVD.dll" />
-    <file src="bin/Release/netstandard2.0/VulnerabilityData.bin" target="contentFiles/any/any/VulnerabilityData.bin" />
   </files>
 </package>
