--- a/Src/NuGetDefense.NVD/NuGetDefense.NVD.nuspec
+++ b/Src/NuGetDefense.NVD/NuGetDefense.NVD.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>NuGetDefense.NVD</id>
     <title>NuGetDefense.NVD</title>
-    <version>1.0.3.1</version>
+    <version>1.0.3.2</version>
     <authors>Curtis Carter</authors>
     <owners>Curtis Carter</owners>
     <projectUrl>https://github.com/DigitalCoyote/NuGetDefense</projectUrl>
@@ -26,5 +26,6 @@
 
   <files>
     <file src="bin/Release/netstandard2.0/NuGetDefense.NVD.dll" target="lib/netstandard2.0/NuGetDefense.NVD.dll" />
+    <file src="bin/Release/netstandard2.0/NuGetDefense.NVD.pdb" target="lib/netstandard2.0/NuGetDefense.NVD.pdb" />
   </files>
 </package>
