--- a/Src/NuGetDefense.NVD/NuGetDefense.NVD.csproj
+++ b/Src/NuGetDefense.NVD/NuGetDefense.NVD.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>netstandard2.1</TargetFramework>
         <LangVersion>9</LangVersion>
     </PropertyGroup>
     <PropertyGroup>
@@ -23,7 +23,7 @@
     <ItemGroup>
       <PackageReference Include="MessagePack" Version="2.2.85" />
       <PackageReference Include="NuGet.Versioning" Version="5.8.1" />
-      <PackageReference Include="NuGetDefense.Core" Version="2.0.1.1" />
+      <PackageReference Include="NuGetDefense.Core" Version="1.0.9" />
       <PackageReference Include="System.Text.Json" Version="5.0.1" />
     </ItemGroup>
 </Project>
