NVD Parsing Improvements
Specific version Vulnerabilities now parsed correctly
Added to Tests for log4net, Jquery, System.Net.Http and NLog

--- a/Src/NVDFeedTests/NVDFeedTests.csproj
+++ b/Src/NVDFeedTests/NVDFeedTests.csproj
@@ -11,7 +11,6 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
         <PackageReference Include="NuGet.Versioning" Version="5.9.0" />
-        <PackageReference Include="NuGetDefense" Version="2.0.2" />
         <PackageReference Include="System.Text.Json" Version="5.0.1" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -34,6 +33,18 @@
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Update="TestFiles\nvdcve-System.Net.Http.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestFiles\nvdcve-JQuery.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestFiles\nvdcve-Log4Net.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestFiles\nvdcve-NLog.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestFiles\nvdcve-MessagePack.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
