--- a/Src/NuGetDefense.NVD/NuGetDefense.NVD.csproj
+++ b/Src/NuGetDefense.NVD/NuGetDefense.NVD.csproj
@@ -26,17 +26,20 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
     <ItemGroup>
-        <None Include="icon.png" Pack="true" PackagePath="\" />
-    </ItemGroup>    
+        <None Include="icon.png" Pack="true" PackagePath="\"/>
+    </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="MessagePack" Version="2.4.59" />
-      <PackageReference Include="NuGet.Versioning" Version="6.4.0" />
-      <PackageReference Include="NuGetDefense.Core" Version="2.0.4" />
-      <PackageReference Include="System.Text.Json" Version="7.0.1" />
-    </ItemGroup>    
+        <PackageReference Include="MessagePack" Version="2.5.108"/>
+        <PackageReference Include="NuGet.Versioning" Version="6.5.0"/>
+        <PackageReference Include="NuGetDefense.Core" Version="2.0.5"/>
+        <PackageReference Include="System.Text.Json" Version="7.0.2"/>
+    </ItemGroup>
     <ItemGroup>
-      <Content Include="..\..\README.md" Pack="true" PackagePath="\">
-        <Link>README.md</Link>
-      </Content>
+        <Content Include="..\..\README.md" Pack="true" PackagePath="\">
+            <Link>README.md</Link>
+        </Content>
+    </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\NugetDefense.NVD.API\NugetDefense.NVD.API.csproj"/>
     </ItemGroup>
 </Project>
