--- a/Src/NugetDefense.NVD.API/NugetDefense.NVD.API.csproj
+++ b/Src/NugetDefense.NVD.API/NugetDefense.NVD.API.csproj
@@ -28,7 +28,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="System.Net.Http.Json" Version="7.0.1"/>
+        <PackageReference Include="System.Net.Http.Json" Version="7.0.1" />
+        <PackageReference Include="System.Threading.RateLimiting" Version="7.0.0" />
     </ItemGroup>
 
 </Project>
