Moving VulnData Updating to new class. Obsoleting old functionality

--- a/Src/NuGetDefense.NVD/NuGetDefense.NVD.csproj
+++ b/Src/NuGetDefense.NVD/NuGetDefense.NVD.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <LangVersion>10</LangVersion>
-        <PackageVersion>2.1.0</PackageVersion>
+        <PackageVersion>2.1.0-prelease2</PackageVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Nullable>enable</Nullable>
         <Copyright>Curtis Carter 2023</Copyright>
@@ -14,7 +14,7 @@
         <Title>NuGetDefense.NVD</Title>
         <PackageProjectUrl>https://github.com/DigitalCoyote/NuGetDefense.NVD</PackageProjectUrl>
         <Description>Provides logic to scan packages using the National Vulnerability Database.</Description>
-        <PackageReleaseNotes>https://github.com/digitalcoyote/NuGetDefense.NVD/releases/tag/v2.1.0</PackageReleaseNotes>
+        <PackageReleaseNotes>https://github.com/digitalcoyote/NuGetDefense.NVD/releases/tag/v2.1.0-prelease2</PackageReleaseNotes>
         <RepositoryUrl>https://github.com/digitalcoyote/NuGetDefense.NVD.git</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PackageTags>Security</PackageTags>
@@ -31,7 +31,7 @@
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="MessagePack" Version="2.5.108" />
-        <PackageReference Include="NuGet.Versioning" Version="6.5.0" />
+        <PackageReference Include="NuGet.Versioning" Version="6.6.0" />
         <PackageReference Include="NuGetDefense.Core" Version="2.0.5" />
         <PackageReference Include="System.Text.Json" Version="7.0.2" />
     </ItemGroup>
