--- a/Src/NugetDefense.NVD.API/NugetDefense.NVD.API.csproj
+++ b/Src/NugetDefense.NVD.API/NugetDefense.NVD.API.csproj
@@ -7,7 +7,7 @@
         <AssemblyName>NugetDefense.NVD.API</AssemblyName>
         <RootNamespace>NugetDefense.NVD.API</RootNamespace>
         <LangVersion>default</LangVersion>
-        <Version>1.0.0</Version>
+        <Version>1.0.0-prerelease</Version>
         <Title>NugetDefense.NVD.API</Title>
         <Description>A NVD 2.0 API client written for NuGetDefense. This product uses the NVD API but is not endorsed or certified by the NVD.</Description>
         <Copyright>Curtis Carter 2023</Copyright>
@@ -15,19 +15,30 @@
         <PackageIcon>icon.png</PackageIcon>
         <RepositoryUrl>https://github.com/digitalcoyote/NuGetDefense.NVD</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PackageTags>security nvd vulnerability client nugetdefense</PackageTags>
         <PackageReleaseNotes>Initial Release</PackageReleaseNotes>
         <Authors>Curtis Carter</Authors>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
     <ItemGroup>
         <None Include="..\NuGetDefense.NVD\icon.png">
             <Pack>True</Pack>
-            <PackagePath></PackagePath>
+            <PackagePath>/</PackagePath>
             <Link>icon.png</Link>
         </None>
     </ItemGroup>
-
+    <ItemGroup>
+        <Content Include="..\..\README.md" Pack="true" PackagePath="\">
+            <Link>README.md</Link>
+        </Content>
+    </ItemGroup>
     <ItemGroup>
         <PackageReference Include="System.Net.Http.Json" Version="7.0.1" />
         <PackageReference Include="System.Threading.RateLimiting" Version="7.0.0" />
