--- a/Src/NugetDefense.NVD.API/NugetDefense.NVD.API.csproj
+++ b/Src/NugetDefense.NVD.API/NugetDefense.NVD.API.csproj
@@ -1,13 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AssemblyName>NugetDefense.NVD.API</AssemblyName>
         <RootNamespace>NugetDefense.NVD.API</RootNamespace>
         <LangVersion>default</LangVersion>
-        <Version>1.0.0-prerelease2</Version>
+        <Version>1.0.0</Version>
         <Title>NugetDefense.NVD.API</Title>
         <Description>A NVD 2.0 API client written for NuGetDefense. This product uses the NVD API but is not endorsed or certified by the NVD.</Description>
         <Copyright>Curtis Carter 2023</Copyright>
@@ -25,7 +24,8 @@
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <AssemblyVersion>1.0.0-prerelease2</AssemblyVersion>
+        <AssemblyVersion>1.0.0</AssemblyVersion>
+        <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
@@ -41,8 +41,8 @@
         </Content>
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="System.Net.Http.Json" Version="7.0.1" />
-        <PackageReference Include="System.Threading.RateLimiting" Version="7.0.0" />
+        <PackageReference Include="System.Net.Http.Json" Version="8.0.0" />
+        <PackageReference Include="System.Threading.RateLimiting" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
