--- a/Src/NVDFeedImporter/NVDFeedImporter.csproj
+++ b/Src/NVDFeedImporter/NVDFeedImporter.csproj
@@ -2,8 +2,8 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
         <LangVersion>default</LangVersion>
+        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
